--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joy Home</title>
+    <title>iHome</title>
     <!-- 开启顶部安全区适配 -->
     <van-nav-bar safe-area-inset-top />
     <!-- 开启底部安全区适配 -->
